--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.moviePic{
+	height:300px;
+	width:300px;
+	opacity:0.8;
+}
+.movieDetail{
+	position:relative;
+	top:5px;
+	width:200px;
+	text-align:center;
+	font-size:20px;
+	font-weight:900;
+}
